# radexi-cmd

./: .clang_complete  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  CMakeLists.txt.in  Dependencies.cmake  Makefile  README.md  build.sh
cmake/: 3rdpartyInstall.cmake
docs/doxygen/: Doxygen.config
inc/: ANSI-color-codes.h  radexi.h
include/radexi/: defines.h  status.h
include/radexi/input/: input_data.h  range.h
include/radexi/lamda/: doc.h  node.h  parse.h
include/radexi/math/: vec.h
src/: bgfield.c  dialogue.c  linenoise.c  main.c  matrix.c  moldata.c  options.c  output.c  readdata.c  rxi_common.c  rxi_common.h
src/core/: background.c  background.h  calculation.c  calculation.h  dialogue.c  dialogue.h  output.c  output.h  sobolev.c  sobolev.h
src/input/: range.c
src/lamda/: doc.c  node.c  parse.c
src/utils/: cli_tools.c  cli_tools.h  csv.c  csv.h  database.c  database.h  debug.h  options.c  options.h
test/: CMakeLists.txt  lamda_test.h  main.c  range_test.h
tests/: cli.c  database.c  debugging.c  opts.c  paths.c  raw_mode.c
